--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "keycloak-js": "^15.0.2",
+    "vue": "^2.5.11",
+    "vuejs-logger": "^1.5.5"
   },
   "browserslist": [
     "> 1%",
