--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@baloise/vue-keycloak": "^1.5.0",
+    "@dsb-norge/vue-keycloak-js": "^2.1.0-beta",
     "core-js": "^3.6.5",
-    "jwt-decode": "^3.1.2",
     "keycloak-js": "^15.0.2",
     "vue": "^3.0.0"
   },
