--- a/.env.gw
+++ b/.env.gw
@@ -1,2 +1,2 @@
 NODE_ENV=production
-VUE_APP_KEYCLOAK_URL=https://keycloak.kessler.playground.grossweber.com/auth/
+VUE_APP_KEYCLOAK_URL=https://keycloak.kessler.grossweber.com/
