--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@baloise/vue-axios": "^1.3.2",
     "@dsb-norge/vue-keycloak-js": "^2.1.5-beta",
+    "@vuepic/vue-datepicker": "^4.2.0",
+    "axios": "^1.3.4",
     "core-js": "^3.6.5",
-    "keycloak-js": "^20.0.3",
+    "jwt-decode": "^3.1.2",
+    "keycloak-js": "^21.0.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
